force-app/main/default/objects/EBooking__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ocean Export</fullName>
            </value>
            <value>
                <fullName>Ocean Import</fullName>
            </value>
            <value>
                <fullName>Air Export</fullName>
            </value>
            <value>
                <fullName>Air Import</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>