force-app/main/default/objects/EBooking__c/fields/SI_Cut_off_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>SI_Cut_off_for_Customer__c</fullName>
    <label>SI Cut-off (for Customer)</label>
    <type>DateTime</type>
</CustomField>