force-app/main/default/objects/EBooking__c/fields/SI_Cut_off_from_Carrier__c.field-meta.xml
<CustomField>
    <fullName>SI_Cut_off_from_Carrier__c</fullName>
    <label>SI Cut-off (from Carrier)</label>
    <type>DateTime</type>
</CustomField>