force-app/main/default/objects/EBooking__c/fields/Stuffing_Date__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Date__c</fullName>
    <label>Stuffing Date</label>
    <type>Date</type>
</CustomField>