force-app/main/default/objects/EBooking__c/fields/Stuffing_Place__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Place__c</fullName>
    <label>Stuffing Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>