force-app/main/default/objects/EBooking__c/fields/This_Booking_is_combined_to__c.field-meta.xml
<CustomField>
    <fullName>This_Booking_is_combined_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>This Booking is combined to</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>