force-app/main/default/objects/EBooking__c/fields/Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>Transit_Port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>E_Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>