force-app/main/default/objects/EBooking__c/fields/Transit_VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>Transit_VesselFlight__c</fullName>
    <label>Transit Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>