force-app/main/default/objects/EBooking__c/fields/Transit_Voyage__c.field-meta.xml
<CustomField>
    <fullName>Transit_Voyage__c</fullName>
    <label>Transit Voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>