force-app/main/default/objects/EBooking__c/fields/VAS_Type__c.field-meta.xml
<CustomField>
    <fullName>VAS_Type__c</fullName>
    <label>VAS Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>