force-app/main/default/objects/EBooking__c/fields/VesselID__c.field-meta.xml
<CustomField>
    <fullName>VesselID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel ID</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>