force-app/main/default/objects/EBooking__c/fields/VGM_Cut_off_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>VGM_Cut_off_for_Customer__c</fullName>
    <label>VGM Cut-off (for Customer)</label>
    <type>DateTime</type>
</CustomField>