force-app/main/default/objects/EBooking__c/fields/VGM_Cut_off_from_Carrier__c.field-meta.xml
<CustomField>
    <fullName>VGM_Cut_off_from_Carrier__c</fullName>
    <label>VGM Cut-off (from Carrier)</label>
    <type>DateTime</type>
</CustomField>