force-app/main/default/objects/EBooking__c/fields/Want_Auto_Email_When_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Want_Auto_Email_When_Status_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want Auto Email When Status Changed</label>
    <type>Checkbox</type>
</CustomField>