force-app/main/default/objects/EBooking__c/fields/Want_cc_to_Shipper_When_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Want_cc_to_Shipper_When_Status_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want cc to Shipper When Status Changed</label>
    <type>Checkbox</type>
</CustomField>