force-app/main/default/objects/EBooking__c/validationRules/CutoffTime.validationRule-meta.xml
<ValidationRule>
    <fullName>CutoffTime</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ETD__c &lt;=  DATEVALUE( SI_Cut_off_from_Carrier__c ),
 ETD__c &lt;=  DATEVALUE(  VGM_Cut_off_from_Carrier__c  ),
 ETD__c &lt;=  DATEVALUE(  Cargo_Closing_Time__c  ))</errorConditionFormula>
    <errorMessage>ETD must be greater than SI Cut-off (from Carrier), VGM Cut-off (from Carrier),Cargo Closing Time</errorMessage>
</ValidationRule>