force-app/main/default/objects/EBooking__c/validationRules/InputPIC.validationRule-meta.xml
<ValidationRule>
    <fullName>InputPIC</fullName>
    <active>true</active>
    <errorConditionFormula>AND (CancelFee__c &gt; 0,  ISNULL(CancelsPIC__c) = TRUE)</errorConditionFormula>
    <errorDisplayField>CancelsPIC__c</errorDisplayField>
    <errorMessage>Please input the PIC for this Cancel Fee</errorMessage>
</ValidationRule>