force-app/main/default/objects/EBooking__c/validationRules/Lock_Edit_EBooking_When_Status_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Edit_EBooking_When_Status_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT ( ISCHANGED( Locked__c ) ) ,
Locked__c = TRUE, OR(ISPICKVAL(PRIORVALUE(Booking_Status__c), &quot;Cancelled&quot;),ISPICKVAL(PRIORVALUE(Booking_Status__c), &quot;Partial Cancelled&quot;) ))</errorConditionFormula>
    <errorDisplayField>Booking_Status__c</errorDisplayField>
    <errorMessage>You can not edit cancelled E-Booking.</errorMessage>
</ValidationRule>