force-app/main/default/objects/EBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Status__c</columns>
    <columns>Cargo_Closing_Time__c</columns>
    <columns>Container_Qty_1__c</columns>
    <columns>POLAOD__c</columns>
    <columns>PODAOD__c</columns>
    <columns>Carrier__c</columns>
    <columns>VesselFlight__c</columns>
    <columns>Voyage__c</columns>
    <columns>AdvancedShipment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>